@@ -1,5 +1,13 @@
 2001-08-11  Martin Baulig  <baulig@suse.de>
 
+	* menu-properties.[ch]: #ifdef FIXME some stuff.
+
+	* scroll-menu.[ch]: Ported to GTK+ 2.0.
+
+	* swallow.[ch]: Ported to GTK+ 2.0, but `#ifdef FIXME'.
+
+2001-08-11  Martin Baulig  <baulig@suse.de>
+
 	* Makefile.am: Disable the gwmh stuff for the moment and
 	#ifdef FIXME it everywhere.
 
